test/scc/ext/tm/semantic-errors/005.a
005.t:4:5: error: volatile objects cannot be used within _Transaction_safe function